# RTES2025_HW3

./: General_commands.sh  README.md
auto-wifi-connect/: auto-connect.sh
ipc/: fifo-reader.sh  fifo-writer.sh  shm-reader  shm-reader.cpp  shm-writer  shm-writer.cpp  signal-receiver  signal-receiver.cpp  signal-sender  signal-sender.cpp
remote control/: CMakeLists.txt  Makefile  README.md
remote control/include/: hardware_monitor.h  ssh_connection.h
remote control/src/: hardware_monitor.cpp  main.cpp  ssh_connection.cpp
simple-web-server/: simple-web-server.sh  webserver.service
